# reddit-analyzer

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
docker/: docker-compose.yml  init.sql
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  insight_agent.py  pain_point_agent.py  persona_agent.py  promotion_agent.py  report_agent.py  sentiment_agent.py  tone_agent.py
src/config/: __init__.py  agent_configs.py  settings.py
src/database/: __init__.py  connection.py  models.py
src/database/repositories/: __init__.py  analysis_repo.py  author_repo.py  comment_repo.py  community_repo.py  post_repo.py
src/reddit/: __init__.py  client.py  parsers.py  rate_limiter.py
src/state/: __init__.py  enums.py  schema.py
src/utils/: __init__.py  formatters.py  validators.py
src/workflow/: __init__.py  graph.py  routing.py
src/workflow/nodes/: __init__.py
src/workflow/nodes/analysis/: __init__.py  analyze_pain_points.py  analyze_promotion.py  analyze_sentiment.py  analyze_tone.py  merge_analysis.py
src/workflow/nodes/collection/: __init__.py  fetch_comments.py  fetch_posts.py  store_to_db.py
src/workflow/nodes/extraction/: __init__.py  extract_audience.py  extract_engagement.py  extract_flairs.py  extract_scores.py  extract_timing.py  extract_titles.py  merge_extraction.py
src/workflow/nodes/synthesis/: __init__.py  generate_insights.py  generate_personas.py  generate_report.py
tests/: __init__.py  conftest.py  test_formatters.py  test_parsers.py  test_validators.py
